--- a/index/category.html
+++ b/index/category.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Категории@Symptom</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Категории@Symptom</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
+
 <body>
-    <div class="wrapper">
-        <section class="brands_container">
-            <div class="brand_column_1">
-                <a href="#" class="link_o_objects">Other&nbsp;Objects</a>
-                <a href="#" class="link_s_rosa">Sub&nbsp;Rosa</a>
-                <a href="#" class="link_b_form">Black.Form</a>
-                <a href="#" class="link_n_concept">Not&nbsp;Concept</a>
-                <a href="#" class="link_hubris">HUBRIS</a>
-                <a href="#" class="link_arha">Arha</a>
-            </div>
-            <div class="brand_column_2">
-                <a href="#" class="link_48">48</a>
-                <a href="#" class="link_1991">1991</a>
-                <a href="#" class="link_behurr">Behurr</a>
-                <a href="#" class="link_atauchi">Atauchi</a>
-                <a href="#" class="link_od_objects">Odor&nbsp;Objects</a>
-                <a href="#" class="link_a_maslovskaya">Anna Maslovskaya</a>
-            </div>
-            <div class="brand_column_3">
-                <a href="#" class="link_perfert">Perfert</a>
-                <a href="#" class="link_liberte">Liberte</a>
-                <a href="#" class="link_n_tonkal">Natalie&nbsp;Tonkal</a>
-            </div>
-        </section>
-    </div>
+
+  <div class="dropdown_wrapper">
+      <section class="dropdown_container">
+          <ul class="dropdown_column_1">
+              <li><a href="#" class="">Подвески</a></li>
+              <li><a href="#" class="">Серьги</a></li>
+              <li><a href="#" class="">Кольца</a></li>
+              <li><a href="#" class="">Каффы</a></li>
+              <li><a href="#" class="">Браслеты</a></li>
+              <li><a href="#" class="">Заколки</a></li>
+          </ul>
+          <ul class="dropdown_column_2">
+              <li><a href="#" class="">Головные&nbsp;уборы</a></li>
+          </ul>
+      </section>
+      <section class="dropdown_container_photo"></section>
+  </div>
+
 </body>
 </html>
