--- a/index/waranty_and_return.html
+++ b/index/waranty_and_return.html
@@ -1,44 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Возврат и обмен</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="robots"content="">
+  <title>Возврат и обмен@Symptom</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" href="img/favicon.ico" type="image/ico">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
+
 <body>
-    <div class="container_oferta">
-        <span class="oferta">ВОЗВРАТ И ОБМЕН</span>
-        <p class="text_oferta">Гарантии на товар и возврат товара.
+  <div class="container__info-pages">
 
-            1. Согласно Перечню непродовольственных товаров надлежащего качества, не подлежащих возврату или обмену,
-            утвержденном Постановлением Правительства РФ от 19.01.1998 № 55 возврат ювелирных украшений надлежащего качества не производится.
+    <header class="header__black">
+      <a href="index.html" class="header__logo">
+        <img src="img/logo_b.svg" alt="logo">
+      </a>
+      <nav class="header__nav_black">
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_brands">БРЕНДЫ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_category">КАТЕГОРИИ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_subcribe">ПОДПИШИСЬ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_login">ВОЙТИ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_wishes">ЖЕЛАНИЯ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_cart">КОРЗИНА</button>
+      </nav>
+    </header>
 
-            2. Гарантийный срок на ювелирные украшения составляет шесть месяцев. Под гарантией понимается ремонт ювелирных украшений
-            с производственным браком за счёт продавца. Для подтверждения производственного брака изделие передается ПРОДАВЦУ для проведения
-            независимой ювелирной и геммологической экспертизы. Если в результате экспертизы товара установлено, что его недостатки возникли
-            вследствие обстоятельств, за которые не отвечает ПРОДАВЕЦ, ПОКУПАТЕЛЬ обязан возместить ПРОДАВЦУ расходы на проведение экспертизы,
-            а также связанные с ее проведением расходы на хранение и транспортировку.
-
-            3. В случае обнаружения дефектов ювелирного изделия при получении, ПОКУПАТЕЛЬ имеет право обменять ювелирное изделие на аналогичное
-            при условии сохранения чека, бирки и отсутствия следов носки.
-
-            4. Доставка изделий на возврат осуществляется за счет ПОКУПАТЕЛЯ. ПОКУПАТЕЛЬ соглашается с тем, что доставка не является частью Товара,
-            но лишь отдельной услугой, которая заканчивается в момент передачи Товара ПОКУПАТЕЛЮ. В связи с этим приобретение Товара с доставкой
-            не дает ПОКУПАТЕЛЮ право требования доставки приобретенного Товара в целях гарантийного обслуживания или замены посредством выезда
-            к ПОКУПАТЕЛЮ и не подразумевает возможность возврата стоимости доставки Товара в случаях, когда Покупатель имеет право на возврат денег
-            за Товар как таковой, в соответствии с Законом РФ «О защите прав потребителей».
-
-            5. Срок устранения недостатков и производственного брака ювелирного изделия составляет 60 дней с момента признания ювелирной
-            и геммологической экспертизы производственного брака.
-
-            6. Неправильный уход за ювелирным изделием, который привёл к дефектам ювелирного изделия не считается производственным браком.
-            Гарантия не распространяется на дефекты, образовавшиеся в результате: естественного износа, механических повреждений; воздействия
-            химических веществ и воды; экстремальных температур; неправильной эксплуатации.
-
-            7. Возврат товара принимается Продавцом по адресу: 115184, Москва​, Большой Овчинниковский переулок, 24 с1, магазин “Симптом”.</p>
+    <!-- <div class="">
+    <div class="dropdown-menu__wrapper">
+      <section class="dropdown-menu__container">
+      <ul class="dropdown-menu__column">
+        <li class="dropdown-menu__item-box"><a href="#" class="">Other Objects</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Liberte</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Arha</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">HUBRIS</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">1991</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">48</a></li>
+      </ul>
+      <ul class="dropdown-menu__column">
+        <li class="dropdown-menu__item-box"><a href="#" class="">Sub Rosa</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Not Concept</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Perfert</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Behurr</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Atauchi</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Odor Objects</a></li>
+      </ul>
+      <ul class="dropdown-menu__column">
+        <li class="dropdown-menu__item-box"><a href="#" class="">Black.Form</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Natalie Tonkal</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Anna Maslovskaya</a></li>
+      </ul>
+      </section>
+      <section class="dropdown-menu__container-photo">
+      </section>
     </div>
+    </div> -->
+
+    <!-- <div class="">
+    <div class="dropdown-menu__wrapper">
+      <section class="dropdown-menu__container">
+      <ul class="dropdown-menu__column">
+        <li class="dropdown-menu__item-box"><a href="#" class="">Подвески</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Серьги</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Кольца</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Каффы</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Браслеты</a></li>
+        <li class="dropdown-menu__item-box"><a href="#" class="">Заколки</a></li>
+      </ul>
+      <ul class="dropdown-menu__column">
+        <li class="dropdown-menu__item-box"><a href="#" class="">Головные уборы</a></li>
+      </ul>
+      </section>
+      <section class="dropdown-menu__container-photo"></section>
+    </div>
+    </div> -->
+
+    <h1 class="info-pages__heading">ГАРАНТИЯ И ВОЗВРАТ</h1>
+      <h2 class="info-pages__text">Гарантии на товар и возврат товара.<br><br>
+        <p>1. Согласно Перечню непродовольственных товаров надлежащего качества, не подлежащих возврату или обмену,
+        утвержденном Постановлением Правительства РФ от 19.01.1998 № 55 возврат ювелирных украшений надлежащего качества не производится.</p><br><br>
+        <p>2. Гарантийный срок на ювелирные украшения составляет шесть месяцев. Под гарантией понимается ремонт ювелирных украшений
+        с производственным браком за счёт продавца. Для подтверждения производственного брака изделие передается ПРОДАВЦУ для проведения
+        независимой ювелирной и геммологической экспертизы. Если в результате экспертизы товара установлено, что его недостатки возникли
+        вследствие обстоятельств, за которые не отвечает ПРОДАВЕЦ, ПОКУПАТЕЛЬ обязан возместить ПРОДАВЦУ расходы на проведение экспертизы,
+        а также связанные с ее проведением расходы на хранение и транспортировку.</p><br><br>
+        <p>3. В случае обнаружения дефектов ювелирного изделия при получении, ПОКУПАТЕЛЬ имеет право обменять ювелирное изделие на аналогичное
+        при условии сохранения чека, бирки и отсутствия следов носки.</p><br><br>
+        <p>4. Доставка изделий на возврат осуществляется за счет ПОКУПАТЕЛЯ. ПОКУПАТЕЛЬ соглашается с тем, что доставка не является частью Товара,
+        но лишь отдельной услугой, которая заканчивается в момент передачи Товара ПОКУПАТЕЛЮ. В связи с этим приобретение Товара с доставкой
+        не дает ПОКУПАТЕЛЮ право требования доставки приобретенного Товара в целях гарантийного обслуживания или замены посредством выезда
+        к ПОКУПАТЕЛЮ и не подразумевает возможность возврата стоимости доставки Товара в случаях, когда Покупатель имеет право на возврат денег
+        за Товар как таковой, в соответствии с Законом РФ «О защите прав потребителей».</p><br><br>
+        <p>5. Срок устранения недостатков и производственного брака ювелирного изделия составляет 60 дней с момента признания ювелирной
+        и геммологической экспертизы производственного брака.</p><br><br>
+        <p>6. Неправильный уход за ювелирным изделием, который привёл к дефектам ювелирного изделия не считается производственным браком.
+        Гарантия не распространяется на дефекты, образовавшиеся в результате: естественного износа, механических повреждений; воздействия
+        химических веществ и воды; экстремальных температур; неправильной эксплуатации.</p><br><br>
+        <p>7. Возврат товара принимается Продавцом по адресу: 115184, Москва​, Большой Овчинниковский переулок, 24 с1, магазин “Симптом”.</p>
+      </h2>
+  </div>
 </body>
+
 </html>
