--- a/index/account.html
+++ b/index/account.html
@@ -1,55 +1,126 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Профиль @ Symptom</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="robots"content="">
+  <title>Профиль@Symptom</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" href="img/favicon.ico" type="image/ico">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
+
 <body>
-    <div class="container_account">
-        <p class="account_name">ПРОФИЛЬ ПОЛЬЗОВАТЕЛЯ</p>
-        <div class="account_menu">
-            <div class="buttons_box btn">
-                <a href="#" class="profile">ПРОФИЛЬ</a>
-                <a href="#" class="orders">ЗАКАЗЫ</a>
-                <a href="#" class="preorders">ПРЕДЗАКАЗЫ</a>
-            </div>
+
+  <div class="container_account">
+    <header class="header__black">
+      <a href="index.html" class="header__logo">
+        <img src="img/logo_b.svg" alt="logo">
+      </a>
+      <nav class="header__nav_black">
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_brands">БРЕНДЫ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_category">КАТЕГОРИИ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_subcribe">ПОДПИШИСЬ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_login">ВОЙТИ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_wishes">ЖЕЛАНИЯ</button>
+        <button type="button" class="main__text_style_black buttons_box btn header__nav_cart">КОРЗИНА</button>
+      </nav>
+    </header>
+
+      <!-- <div class="">
+        <div class="dropdown-menu__wrapper">
+          <section class="dropdown-menu__container">
+            <ul class="dropdown-menu__column">
+              <li class="dropdown-menu__item-box"><a href="#" class="">Other Objects</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Liberte</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Arha</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">HUBRIS</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">1991</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">48</a></li>
+            </ul>
+            <ul class="dropdown-menu__column">
+              <li class="dropdown-menu__item-box"><a href="#" class="">Sub Rosa</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Not Concept</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Perfert</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Behurr</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Atauchi</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Odor Objects</a></li>
+            </ul>
+            <ul class="dropdown-menu__column">
+              <li class="dropdown-menu__item-box"><a href="#" class="">Black.Form</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Natalie Tonkal</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Anna Maslovskaya</a></li>
+            </ul>
+          </section>
+          <section class="dropdown-menu__container-photo">
+          </section>
         </div>
-        <form action="#" method="POST">
-            <fieldset class="account_string_01">
-                <div class="inline_div_account">
-                    <label class="label_name">
-                        <p>ИМЯ:</p>
-                        <input type="text" id="name" name="name" placeholder="Amar" required>
-                    </label>
-                    <label class="label_surname">
-                        <p>ФАМИЛИЯ:</p>
-                        <input type="text" id="surname" name="surname" placeholder="Sky" required>
-                    </label>
-                    <label class="label_username">
-                        <p>ЮЗЕР&nbsp;НЭЙМ:</p>
-                        <input type="text" id="user" name="username" placeholder="Jengu the dolphin" required>
-                    </label>
-                </div>
-            </fieldset>
-            <fieldset class="account_string_02">
-                <div class="inline_div_account">
-                    <label class="label_mail">
-                        <p>ЭЛЕКТРОННАЯ&nbsp;ПОЧТА:</p>
-                        <input type="email" id="usermail" name="usermail" placeholder="hello@symptom.jewelry" required>
-                    </label>
-                    <label class="label_pass">
-                        <p>ПАРОЛЬ:</p>
-                        <input type="password" id="pass" name="password" placeholder="**********" required>
-                    </label>
-                </div>
-            </fieldset>
-        </form>
-        <button type="button" class="btn_sign_in"></button>
-        <button type="button" class="btn_edit"></button>
-    </div>
+      </div> -->
+
+      <!-- <div class="">
+        <div class="dropdown-menu__wrapper">
+          <section class="dropdown-menu__container">
+            <ul class="dropdown-menu__column">
+              <li class="dropdown-menu__item-box"><a href="#" class="">Подвески</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Серьги</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Кольца</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Каффы</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Браслеты</a></li>
+              <li class="dropdown-menu__item-box"><a href="#" class="">Заколки</a></li>
+            </ul>
+            <ul class="dropdown-menu__column">
+              <li class="dropdown-menu__item-box"><a href="#" class="">Головные уборы</a></li>
+            </ul>
+          </section>
+          <section class="dropdown-menu__container-photo"></section>
+        </div>
+      </div> -->
+    <p class="account_name">ПРОФИЛЬ ПОЛЬЗОВАТЕЛЯ</p>
+      <div class="account_menu">
+        <div class="buttons_box btn">
+          <button type="button" class="main__text_style_black btn">ПРОФИЛЬ</button>
+          <button type="button" class="main__text_style_black btn">ЗАКАЗЫ</button>
+          <button type="button" class="main__text_style_black btn">ПРЕДЗАКАЗЫ</button>
+        </div>
+      </div>
+      <form action="#" method="POST">
+        <fieldset class="account_string_01">
+          <div class="inline_div_account">
+            <label class="label_name">
+              <p>ИМЯ:</p>
+              <input type="text" id="name" name="name" placeholder="Amar" required>
+            </label>
+            <label class="label_surname">
+              <p>ФАМИЛИЯ:</p>
+              <input type="text" id="surname" name="surname" placeholder="Sky" required>
+            </label>
+            <label class="label_username">
+              <p>ЮЗЕР&nbsp;НЭЙМ:</p>
+              <input type="text" id="user" name="username" placeholder="Jengu the dolphin" required>
+            </label>
+          </div>
+        </fieldset>
+        <fieldset class="account_string_02">
+          <div class="inline_div_account">
+            <label class="label_mail">
+              <p>ЭЛЕКТРОННАЯ&nbsp;ПОЧТА:</p>
+              <input type="email" id="usermail" name="usermail" placeholder="hello@symptom.jewelry" required>
+            </label>
+            <label class="label_pass">
+              <p>ПАРОЛЬ:</p>
+              <input type="password" id="pass" name="password" placeholder="**********" required>
+            </label>
+          </div>
+        </fieldset>
+      </form>
+    <button type="button" class="btn_sign_in"></button>
+    <button type="button" class="btn_edit"></button>
+  </div>
+
 </body>
+
 </html>
